Added data for task 1, edited readme, and updated the requirements.txt

--- a/Task_1/Task_1_VS_inventory_dataset.ipynb
+++ b/Task_1/Task_1_VS_inventory_dataset.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "014b77dd",
    "metadata": {},
    "outputs": [],
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "18500352",
    "metadata": {},
    "outputs": [],
    "source": [
     "#loading required datasets\n",
-    "supplier_df1 = pd.read_excel('supplier_data_1.xlsx')\n",
-    "supplier_df2 = pd.read_excel('supplier_data_2.xlsx')"
+    "supplier_df1 = pd.read_excel('../data/task_1/supplier_data_1.xlsx')\n",
+    "supplier_df2 = pd.read_excel('../data/task_1/supplier_data_2.xlsx')"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5ae7a25a",
    "metadata": {},
    "outputs": [
